<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:scrollbars="vertical"
    android:visibility="visible"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:context=".view.DetailMovieFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:verticalScrollbarPosition="right">

        <ImageView
            android:id="@+id/iv_movie_poster_detail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fragment_detai_iv_movie_posterl_height"
            android:contentDescription="@string/content_movie_poster_detail"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_movie_trailer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/accent"
            android:src="@android:drawable/ic_media_play"
            android:contentDescription="@string/content_fab_play_trailer"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="@dimen/fragment_detai_iv_movie_poster_margin_horizontal"
            android:layout_marginTop="@dimen/fragment_detai_iv_movie_poster_margin_top"/>

        <TextView
            android:id="@+id/tv_movie_title_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fragment_detail_title_summary_margin"
            android:text="@string/msg_title_summery_movie"
            android:textColor="@color/title"
            android:textSize="@dimen/tv_movie_title_detail"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_movie_poster_detail" />

        <TextView
            android:id="@+id/tv_movie_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/tv_movie_content_margin"
            android:layout_marginVertical="@dimen/tv_movie_detail_margin_vertical"
            android:text="@string/dummy_movie_overview"
            android:textColor="@color/content"
            android:textSize="@dimen/tv_movie_content_detail"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_movie_title_summary" />


        <TextView
            android:id="@+id/tv_movie_title_release_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/tv_movie_detail_margin_title"
            android:text="@string/msg_title_release_movie"
            android:textColor="@color/title"
            android:textSize="@dimen/tv_movie_title_detail"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_movie_overview" />

        <TextView
            android:id="@+id/tv_movie_release_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/tv_movie_content_detail_release_date_margin"
            android:layout_marginTop="@dimen/tv_movie_content_detail_margin_top"
            android:layout_marginBottom="@dimen/tv_movie_content_detail_margin_bottom"
            android:text="@string/dummy_release_date_movie"
            android:textColor="@color/content"
            android:textSize="@dimen/tv_movie_content_detail"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_movie_title_release_date"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>